# Plus-auto

./: .clang-format  README.md  V.cpp  hi.cpp  sol.cpp  sol.h
.github/workflows/: cpp-linter.yml
completed_gtest/: CMakeLists.txt  commands.txt  mytests.cpp
dockerize/: Dockerfile
dockerize/src/: main.cpp
gtest_upload_ways/project_with_gtest/: CMakeLists.txt
modules-example/: Makefile  add.cpp  main.cpp
tools/: .actions  .tmp  hi.cpp  pre_hook.sh  regexps.txt
